--- a/public/locales/tr/translation.json
+++ b/public/locales/tr/translation.json
@@ -1,44 +1,151 @@
 {
-  "about_1": "ZIPO AID Yatırım Tüccarı, dünyanın dört bir yanındaki müşterilerimize güvenilir, tutarlı ve karlı mali yardım sağlar. Ticaret platformlarımıza yapılan yatırımlar, daha iyi risk yönetimi ve karlı ticaret sağlamak için yalnızca deneyimli tüccarlarımız tarafından güvenli bir şekilde güvence altına alınır ve yönetilir.",
-  "faqs": "SSS",
-  "begin": "Başlamak için hesabınızı oluşturun",
-  "profile": "Profil",
-  "log_out": "Çıkış Yap",
-  "legal": "Yasal",
-  "privacy_policy": "Gizlilik Politikası",
-  "max": "Max:",
-  "contact": "İletişim",
-  "referrals": "Yönlendirmeler",
-  "investment_history": "Yatırım geçmişi",
-  "invest_now": "Şimdi yatırım yap",
-  "cap_ret": "Sermaye iadeleri",
-  "portuguese": "pt",
-  "footer_1": "Bu web sitesine dünya çapında erişilebilir, ancak web sitesindeki bilgiler Kale Crypto Investment A/S ile ilgilidir ve MiningTrust'un herhangi bir kuruluşuna özgü değildir. Tüm müşteriler doğrudan MiningTrust A/S ile etkileşime girecek ve tüm müşteri anlaşmaları MiningTrust A/S ile girilecek ve böylece Danimarka Yasası tarafından yönetilecektir.",
-  "app_title": "Zipo yardımı",
-  "contact_us": "Bize Ulaşın",
-  "dashboard": "Gösterge Paneli",
-  "turkish": "tr",
-  "about_us": "Hakkımızda",
-  "l_name": "Soy isim",
-  "sign_in": "Kayıt olmak",
-  "select_plan": "Bir Plan Seçin",
-  "about_3": "Yüksek likidite, güvenilir sipariş yürütme ve sürekli çalışma süresi yoluyla hem bireyler hem de kurumlar için kripto ticaretine premium erişim sağlıyoruz.",
-  "footer_2": "Apple ve Apple logosu, ABD ve diğer ülkelere ve bölgelere kayıtlı Apple Inc'in ticari markalarıdır. App Store, Apple Inc.'in bir hizmet işaretidir. Google Play ve Google Play logosu Google LLC'nin ticari markalarıdır.",
-  "terms_of_service": "Kullanım Şartları",
-  "cert_of_inc": "Kuruluş belgesi",
-  "247": "7/24 destek",
-  "spanish": "es",
-  "username": "Kullanıcı adınızı giriniz",
-  "about_2": "Web mobil cüzdanımızla pazara bağlı kalın. Deneyimli tüccarlar için gelişmiş sipariş türleri ve analitik araçların yanı sıra yeni başlayanlar için basit bir satın alma ve satış arayüzüne sahiptir.",
-  "pro_trading": "Pro Ticaret",
-  "about": "Hakkında",
-  "copyright": "Tüm hakları saklıdır © 2022 Zipoaid. NMLS #1991139",
-  "zipo_aid_investments": "Zipo Yardım Yatırımları",
-  "f_name": "İlk adı",
-  "min": "Min:",
   "welcome": "Zipo-Aid'e hoş geldiniz",
+  "contact": "İletişim",
+  "username": "Kullanıcı adınızı giriniz",
+  "deposit": "Toplam depozito",
+  "no_match_password": "Parolalar uyuşmuyor",
+  "max": "Max:",
+  "cert_of_inc": "Kuruluş belgesi",
+  "about_1": "ZIPO AID Yatırım Tüccarı, dünyanın dört bir yanındaki müşterilerimize güvenilir, tutarlı ve karlı mali yardım sağlar. Ticaret platformlarımıza yapılan yatırımlar, daha iyi risk yönetimi ve karlı ticaret sağlamak için yalnızca deneyimli tüccarlarımız tarafından güvenli bir şekilde güvence altına alınır ve yönetilir.",
+  "steps_3": "3. Pro ticareti başlatın",
+  "about_3": "Yüksek likidite, güvenilir sipariş yürütme ve sürekli çalışma süresi yoluyla hem bireyler hem de kurumlar için kripto ticaretine premium erişim sağlıyoruz.",
+  "investment_history": "Yatırım geçmişi",
+  "submit": "Göndermek",
+  "security": "Kurumsal sınıf güvenliği",
+  "plan": "Plan",
+  "hero_2": "Orijinal kripto değişimi.",
+  "contact_us": "Bize Ulaşın",
+  "invest_now": "Şimdi yatırım yap",
+  "register": "Kayıt ol",
+  "zipo_aid_investments": "Zipo Yardım Yatırımları",
+  "apis_body": "Kendi ticaret arayüzünüzü kurun veya algoritmik stratejinizi yüksek performanslı düzeltmemiz ve HTTP API'lerimizle dağıtın. Gerçek zamanlı veri akışı için WebSocket'imize bağlanın.",
+  "address": "Adres: 3333 Lee Parkway 671A Dallas, ABD",
+  "tools": "Gelişmiş ticaret araçları.",
+  "withdraw_fund": "Fonları Çektirin",
+  "ease_2": "Anında Mevduat Seçenekleri",
+  "privacy_policy": "Gizlilik Politikası",
+  "goal_title": "Hedefinizin gelmesini sağlayın",
+  "invalid_email": "Geçersiz e-posta veya şifre",
+  "transfer": "{{Miktar}} {{name}} 'ye {{adres}}",
+  "investements": "Yatırım",
+  "ease_1": "Sezgisel arayüz",
+  "dashboard": "Gösterge Paneli",
+  "min": "Min:",
+  "f_name": "İlk adı",
+  "spanish": "İspanyol",
+  "portuguese": "Portekizce",
+  "footer_1": "Bu web sitesine dünya çapında erişilebilir, ancak web sitesindeki bilgiler Kale Crypto Investment A/S ile ilgilidir ve MiningTrust'un herhangi bir kuruluşuna özgü değildir. Tüm müşteriler doğrudan MiningTrust A/S ile etkileşime girecek ve tüm müşteri anlaşmaları MiningTrust A/S ile girilecek ve böylece Danimarka Yasası tarafından yönetilecektir.",
+  "english": "ingilizce",
+  "footer_2": "Apple ve Apple logosu, ABD ve diğer ülkelere ve bölgelere kayıtlı Apple Inc'in ticari markalarıdır. App Store, Apple Inc.'in bir hizmet işaretidir. Google Play ve Google Play logosu Google LLC'nin ticari markalarıdır.",
+  "hero_body": "ZIPO AID Yatırım Tüccarı, dünyanın dört bir yanındaki müşterilerimize güvenilir, tutarlı ve karlı mali yardım sağlar. Ticaret platformlarımıza yapılan yatırımlar, daha iyi risk yönetimi ve karlı ticaret sağlamak için yalnızca deneyimli tüccarlarımız tarafından güvenli bir şekilde güvence altına alınır ve yönetilir.",
+  "advanced_body": "Yüksek likidite, güvenilir sipariş yürütme ve sürekli çalışma süresi yoluyla hem bireyler hem de kurumlar için kripto ticaretine premium erişim sağlıyoruz.",
+  "register_caption": "& Apos; Kayıt Hesabı & lsquo; Düğme Gizlilik politikamızı ve Hizmet Şartlarımızı kabul edersiniz.",
+  "welcome_user": "Hoş geldin",
+  "balance": "Kalan bakiye",
+  "m_t_f": "Yatırım yapan uzun ve başarılı özel pazar tarihimiz tarafından bilgilendirilen küresel bir yatırım perspektifi sağlamak",
+  "withdraw_snack": "Gönderilen para çekme",
+  "m_t_e": "Güvenilir, işbirlikçi, uzun vadeli bir ortak olmak",
+  "turkish": "Türk",
+  "our_mission": "Görevimiz",
+  "security_1": "Varlıkların% 98'i çevrimdışı güvenli bir şekilde saklandı",
+  "unlimited": "Web mobil cüzdanımızla sınırsız erişim.",
+  "ease_3": "Fonları başka bir cüzdana çekin",
+  "crypto": "Kripto para",
+  "mission_body": "Güçlü ticaret köklerine ve uzun, köklü bir sicile sahip küresel bir özel pazar yatırımcıyız. Güven, açıklık, saygı ve en yüksek dürüstlük ve profesyonellik standartlarına dayalı yatırımcılarımız, yatırım ortaklarımız ve meslektaşlarımızla uzun vadeli ilişkiler kurmaya kararlıyız.",
+  "chat_us": "7/24 bizimle sohbet edin",
+  "steps_3_btn": "Pro Ticaret",
+  "profile": "Profil",
+  "use_of_site": "Site kullanımı",
+  "referred_by": "Tarafından sevk edilmiş",
+  "hi_welcome": "Selam hoşgeldin",
+  "support": "Sürekli destek",
+  "goal_body": "Çeşitlendirilmiş varlık yönetim sisteminin gücü ile geleceğinizi ve stresinizi kurtarmanıza yardımcı olalım.",
+  "our_email": "zipoaidinvestmentz@gmail.com",
+  "mission_title_2": "Tercih edilen bir yatırım ortağı olacağız:",
+  "about": "Hakkında",
+  "email": "E -posta",
   "c_password": "Şifreyi Onayla",
-  "withdraw_fund": "Çekme Fonu",
+  "about_us": "Hakkımızda",
+  "steps_2": "2. Pazara girin",
+  "l_name": "Soy isim",
+  "security_2": "Yüksek şifreli kişisel veriler",
+  "go_to_dash": "Gösterge Tablosuna Git",
+  "zipo_vip": "Zipo Aid VIP",
+  "z_a_body": "Web mobil cüzdanımızla pazara bağlı kalın. Deneyimli tüccarlar için gelişmiş sipariş türleri ve analitik araçların yanı sıra yeni başlayanlar için basit bir satın alma ve satış arayüzüne sahiptir.",
+  "m_t_c": "Sınıfının en iyisi özel pazar çözümleri, yatırımcı raporlama ve müşteri hizmetleri aracılığıyla beklentileri aşmak için işbirliği içinde ve açık bir şekilde çalışmak",
+  "about_2": "Web mobil cüzdanımızla pazara bağlı kalın. Deneyimli tüccarlar için gelişmiş sipariş türleri ve analitik araçların yanı sıra yeni başlayanlar için basit bir satın alma ve satış arayüzüne sahiptir.",
+  "reliable_2": "7/24 özel destek",
+  "247": "7/24 destek",
+  "d_l_body": "Programın kurallarını, komisyonlarını ve oranlarını, özellikle üyelerin çıkarlarının bir bütün olarak bütünlüğüne saygı duymak için herhangi bir zamanda ve tamamen kendi takdirimize bağlı olarak değiştirme hakkını saklı tutarız. Mevcut şartları gözden geçirmenin sizin sorumluluğunuz olduğunu kabul edersiniz.",
+  "r_g_terms_title": "Sorumluluklar ve Genel Şartlar",
+  "reliable_1": "2018'den beri bitcoin alışverişi",
+  "support_body": "Premium 7/24 destek telefon veya e -posta ile dünya çapında tüm müşteriler için mevcuttur. Ortaklar için özel hesap yöneticileri.",
+  "investment_plans": "Yatırım planları",
+  "terms_of_service": "Kullanım Şartları",
+  "live_chat": "Canlı sohbet",
+  "mission_title_1": "Yatırımcılarımız için tercih edilen özel pazarlar olacağız:",
+  "m_t_b": "Çıkarlarımızın onlarınkiyle uyumlu olmasını sağlamak",
+  "hero_1": "Satın Al ve Ticaret",
+  "m_t_a": "Üstün, uzun vadeli yatırım getirileri üretme",
+  "faqs": "SSS",
+  "referral_link": "Tavsiye bağlantınız",
+  "ease": "Ticaret kolaylığı",
+  "m_t_g": "Hem destekleyici hem de zorlayıcı tek takımlı bir kültür sağlamak ve güçlendirmek",
+  "mission_statement": "Misyon Bildirimimiz",
+  "advanced": "Sezgisel bir arayüzde paketlenmiş gelişmiş araçlar",
+  "zipo_starter": "Zipo yardımı başladı",
+  "security_3": "Beyaz liste ve işlem onayı",
+  "select_plan": "Bir Plan Seçin",
+  "seen": "Görüldüğü gibi",
   "password": "Şifre girin",
-  "register": "Kayıt ol"
+  "privacy": "Bu site HCAPTCHA tarafından korunmaktadır ve Gizlilik Politikası ve Hizmet Şartları Uygulamaktadır.",
+  "no_investments": "Son zamanlarda hiçbir yatırım yapmadınız",
+  "u_o_s_body": "SPAM ihlalcileri derhal yürürlüğe girerek siteden kalıcı olarak çıkarılacaktır. Vogue Capitals Limited, herhangi bir üyeyi açıklama yapmadan kabul etme veya reddetme hakkını saklı tutar.",
+  "d_l_liability": "Feragatname ve Sorumluluk Sınırlaması",
+  "steps_2_btn": "Depozito yapmak",
+  "account": "Hesap:",
+  "privacy_statement": "Gizlilik Beyanı",
+  "m_t_h": "Etkileşimlerimizin dürüstlük ve karşılıklı saygı üzerine kurulmasını sağlamak",
+  "professional": "Profesyonel erişim, kesintisiz kullanılabilirlik",
+  "m_t_d": "Özel pazarların derin bir anlayışına dayanan profesyonel, gerçeğe dayalı bir yatırım yaklaşımı kullanmak",
+  "mail_us": "Bize Posta Edin",
+  "t_c_sub": "Lütfen aşağıdaki yönergeleri okuyun",
+  "earned": "Toplam Kazanç",
+  "app_title": "Zipo yardımı",
+  "interest": "Faiz",
+  "sign_in": "Kayıt olmak",
+  "reliable": "Kanıtlanmış güvenilirlik",
+  "cap_ret": "Sermaye iadeleri",
+  "z_a_invest": "Zipo Yardım Yatırım Planları",
+  "begin": "Başlamak için hesabınızı oluşturun",
+  "mission_title_3": "İstisnai profesyonelleri çekeceğiz, geliştireceğiz ve tutacağız:",
+  "referrals": "Yönlendirmeler",
+  "accept_t_c": "Onay kutusuna tıklayarak şartlar ve koşullarımızı kabul edersiniz",
+  "r_g_body": "ZIPO AID Invesments Limited yalnızca Site üyeleri için kullanılabilir. Bu siteye katılmak için ülkenizde yasal yaşta olmayı kabul edersiniz ve her durumda asgari yaşınızın 18 yıl olması gerekir. Her depozito Vogue Capitals Limited ve üyesi arasında özel bir işlem olarak kabul edilir.",
+  "status": "Durum",
+  "t_c_caption": "Bu web sitesini kullanırken, aşağıdaki şartlar ve koşulları okuduğunuz ve kabul etmiş olduğunuzu kabul edersiniz:",
+  "investment": "Aktif yatırım",
+  "register_now": "Şimdi ücretsiz kaydolun",
+  "log_out": "Çıkış Yap",
+  "withdraw": "Geri çekilmek",
+  "pro_trading": "Pro Ticaret",
+  "apis": "Bir dizi güçlü API",
+  "complete_form": "Lütfen formu doldurun",
+  "legal": "Yasal",
+  "guidance_body": "Ticaret yüksek bir risk taşır ve tüm yatırımcılar için uygun olmayabilir. Vogue Capitals Limited'e yatırım yapmaya karar vermeden önce, finansal durumunuzu ve deneyim seviyenizi dikkatlice düşünmelisiniz. Ticaretle ilgili tüm risklerin farkında olmalısınız ve herhangi bir şüpheniz varsa bağımsız bir finansal danışmandan tavsiye almalısınız. İlk yatırımınızın bir kısmını veya tamamını kaybedebileceğiniz olasılık vardır ve bu nedenle kaybetmeyi göze alamayacağınız para yatırmamalısınız. Kendi sorumluluğunuzda yatırım yapıyorsunuz ve geçmiş bir performansın aynı gelecekteki performans için bir garanti olmadığını kabul ediyorsunuz.",
+  "reliable_3": "Endüstri lideri çalışma süresi",
+  "steps_1": "1. Hesap Oluştur",
+  "protrading_vip": "Profesyonel ticaret yalnızca VIP kullanıcıları için kullanılabilir",
+  "fill_form": "Lütfen formu doğru doldurun",
+  "t_c_title": "Şartlar ve koşullar",
+  "m_t_i": "Yaptığımız her şeyde mükemmelliği beklemek, tanımak ve kutlamak",
+  "location": "Konum",
+  "privacy_body": "Zipo Aid Investments Limited, sizin hakkınızdaki bilgilerin nasıl kullanıldığını ve paylaşıldığını önemsediğinizi bilir. Dolayısıyla, sağladığınız bilgilerle ilgili gizlilik ilkelerini korumak ve saygı göstermek için güçlü bir taahhütte bulunuyoruz. Bir üye tarafından Vogue Capitals Limited'den verilen tüm veriler yalnızca özel olarak kullanılacak ve herhangi bir üçüncü tarafa açıklanmayacaktır. Kişisel bilgilerinizi herhangi bir üçüncü tarafa satmayacak, paylaşmayacak veya kiralamayacağız veya istenmeyen posta için e-posta adresinizi kullanmayacağız. Bu şirket tarafından gönderilen e -postalar yalnızca kararlaştırılan hizmetlerin sağlanmasıyla bağlantılı olacaktır.",
+  "guidance_title": "Rehberlik ve Profesyonel Tavsiye",
+  "zipo_user": "Zipo yardım kullanıcısı",
+  "forgot_password": "Parolanızı mı unuttunuz?",
+  "amount": "Tutar",
+  "no_account": "Hesabınız yok mu?",
+  "copyright": "Tüm hakları saklıdır © 2022 Zipoaid. NMLS #1991139",
+  "get_started": "Başlamak"
 }
