--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -42,7 +42,7 @@
   "mail_us": "Enviarnos por correo",
   "privacy_policy": "Política de privacidad",
   "steps_3": "3. Iniciar comercio Pro",
-  "u_o_s_body": "Los infractores de spam se eliminarán permanentemente del sitio con efecto inmediato. Vogue Capitals Limited se reserva el derecho de aceptar o rechazar a cualquier miembro para la membresía sin explicación.",
+  "u_o_s_body": "Los infractores de spam se eliminarán permanentemente del sitio con efecto inmediato. Zipo Aid Investments Limited se reserva el derecho de aceptar o rechazar a cualquier miembro para la membresía sin explicación.",
   "steps_2": "2. Ingrese al mercado",
   "l_name": "Apellido",
   "max": "Max:",
@@ -88,7 +88,7 @@
   "username": "Ingrese su nombre de usuario",
   "use_of_site": "Uso del sitio",
   "reliable_3": "Tiempo de actividad líder en la industria",
-  "r_g_body": "Zipo Aid Invesments Limited solo está disponible para los miembros del sitio. Usted acepta ser de edad legal en su país para unirse a este sitio y, en todos los casos, su edad mínima debe ser de 18 años. Cada depósito se considera una transacción privada entre Vogue Capitals Limited y su miembro.",
+  "r_g_body": "Zipo Aid Invesments Limited solo está disponible para los miembros del sitio. Usted acepta ser de edad legal en su país para unirse a este sitio y, en todos los casos, su edad mínima debe ser de 18 años. Cada depósito se considera una transacción privada entre Zipo Aid Investments Limited y su miembro.",
   "steps_2_btn": "Hacer un depósito",
   "our_mission": "Nuestra misión",
   "pro_trading": "Comercio profesional",
@@ -126,7 +126,7 @@
   "privacy_statement": "Declaracion de privacidad",
   "m_t_b": "Asegurando que nuestros intereses estén alineados con los suyos",
   "goal_body": "Ayudemos a ahorrar su futuro y estrés con el poder del sistema de gestión de activos diversificado.",
-  "privacy_body": "Zipo Aid Investments Limited sabe que le importa cómo se utiliza y se comparte la información sobre usted. Por lo tanto, hacemos un fuerte compromiso para proteger y respetar los principios de privacidad con respecto a la información que proporciona. Todos los datos dados por un miembro a Vogue Capitals Limited solo se utilizarán en privado y no se divulgarán a terceros. No venderemos, compartiremos ni alquilaremos su información personal a ningún tercero ni utilizaremos su dirección de correo electrónico por correo no solicitado. Cualquier correos electrónicos enviados por esta Compañía solo estará en relación con la provisión de servicios acordados.",
+  "privacy_body": "Zipo Aid Investments Limited sabe que le importa cómo se utiliza y se comparte la información sobre usted. Por lo tanto, hacemos un fuerte compromiso para proteger y respetar los principios de privacidad con respecto a la información que proporciona. Todos los datos dados por un miembro a Zipo Aid Investments Limited solo se utilizarán en privado y no se divulgarán a terceros. No venderemos, compartiremos ni alquilaremos su información personal a ningún tercero ni utilizaremos su dirección de correo electrónico por correo no solicitado. Cualquier correos electrónicos enviados por esta Compañía solo estará en relación con la provisión de servicios acordados.",
   "about_us": "Sobre nosotros",
   "mission_body": "Somos un inversionista mundial de mercados privados con fuertes raíces comerciales y un historial largo y bien establecido. Estamos comprometidos a construir relaciones a largo plazo con nuestros inversores, socios de inversión y colegas basados en la confianza, la apertura, el respeto y los más altos estándares de integridad y profesionalismo.",
   "terms_of_service": "Términos de servicio",
@@ -141,7 +141,7 @@
   "security_1": "El 98% de los activos almacenados de forma segura fuera de línea",
   "m_t_d": "Emplear un enfoque de inversión profesional basado en hechos basado en una comprensión profunda de los mercados privados",
   "c_password": "Confirmar contraseña",
-  "guidance_body": "El comercio conlleva un alto grado de riesgo, y puede no ser adecuado para todos los inversores. Antes de decidir invertir en Vogue Capitals Limited, debe considerar cuidadosamente su condición financiera y su nivel de experiencia. Debe conocer todos los riesgos asociados con el comercio y buscar asesoramiento de un asesor financiero independiente si tiene alguna duda. La posibilidad existe de que pueda mantener una pérdida de algunas o toda su inversión inicial y, por lo tanto, no debe invertir dinero que no puede permitirse perder. Está invirtiendo bajo su propio riesgo y acepta que un desempeño pasado no es una garantía para el mismo desempeño futuro.",
+  "guidance_body": "El comercio conlleva un alto grado de riesgo, y puede no ser adecuado para todos los inversores. Antes de decidir invertir en Zipo Aid Investments Limited, debe considerar cuidadosamente su condición financiera y su nivel de experiencia. Debe conocer todos los riesgos asociados con el comercio y buscar asesoramiento de un asesor financiero independiente si tiene alguna duda. La posibilidad existe de que pueda mantener una pérdida de algunas o toda su inversión inicial y, por lo tanto, no debe invertir dinero que no puede permitirse perder. Está invirtiendo bajo su propio riesgo y acepta que un desempeño pasado no es una garantía para el mismo desempeño futuro.",
   "mission_statement": "Nuestra declaración de misión",
   "zipo_aid_investments": "Inversiones de Aid Zipo",
   "no_match_password": "Las contraseñas no coinciden",
