--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -61,7 +61,7 @@
   "privacy_policy": "Política de Privacidade",
   "invest_now": "Invista agora",
   "security_2": "Dados pessoais altamente criptografados",
-  "u_o_s_body": "Os infratores de spam serão removidos permanentemente do local com efeito imediato. A Vogue Capitals Limited se reserva o direito de aceitar ou recusar qualquer membro da associação sem explicação.",
+  "u_o_s_body": "Os infratores de spam serão removidos permanentemente do local com efeito imediato. A Zipo Aid Investments Limited se reserva o direito de aceitar ou recusar qualquer membro da associação sem explicação.",
   "guidance_title": "Orientação e conselho profissional",
   "reliable": "Confiabilidade comprovada",
   "hero_body": "A Zipo Aid Investment Trader fornece assistência financeira confiável, consistente e lucrativa a nossos clientes em todo o mundo. Os investimentos em nossas plataformas de negociação são com segurança e gerenciados apenas por nossos comerciantes experientes para garantir um melhor gerenciamento de riscos e negociação lucrativa.",
@@ -100,13 +100,13 @@
   "unlimited": "Acesso ilimitado com nossa carteira móvel da web.",
   "our_email": "zipoaidInvestmentz@gmail.com",
   "get_started": "Iniciar",
-  "guidance_body": "A negociação possui um alto grau de risco e pode não ser adequada para todos os investidores. Antes de decidir investir na Vogue Capitals Limited, você deve considerar cuidadosamente sua condição financeira e seu nível de experiência. Você deve estar ciente de todos os riscos associados à negociação e procurar aconselhamento de um consultor financeiro independente, se tiver alguma dúvida. Existe a possibilidade de que você possa sustentar uma perda de algum ou todo o seu investimento inicial e, portanto, não deve investir dinheiro que não pode perder. Você está investindo por seu próprio risco e concorda que um desempenho passado não é uma garantia para o mesmo desempenho futuro.",
+  "guidance_body": "A negociação possui um alto grau de risco e pode não ser adequada para todos os investidores. Antes de decidir investir na Zipo Aid Investments Limited, você deve considerar cuidadosamente sua condição financeira e seu nível de experiência. Você deve estar ciente de todos os riscos associados à negociação e procurar aconselhamento de um consultor financeiro independente, se tiver alguma dúvida. Existe a possibilidade de que você possa sustentar uma perda de algum ou todo o seu investimento inicial e, portanto, não deve investir dinheiro que não pode perder. Você está investindo por seu próprio risco e concorda que um desempenho passado não é uma garantia para o mesmo desempenho futuro.",
   "security_1": "98% dos ativos armazenados com segurança offline",
   "ease_3": "Retirar fundos para qualquer outra carteira",
   "amount": "Quantia",
   "t_c_sub": "Leia as diretrizes abaixo",
   "account": "Conta:",
-  "r_g_body": "O ZIPO Aid Invesments Limited está disponível apenas para os membros do site. Você concorda em ter idade legal em seu país para ingressar neste site e, em todos os casos, sua idade mínima deve ter 18 anos. Todo depósito é considerado uma transação privada entre a Vogue Capitals Limited e seu membro.",
+  "r_g_body": "O ZIPO Aid Invesments Limited está disponível apenas para os membros do site. Você concorda em ter idade legal em seu país para ingressar neste site e, em todos os casos, sua idade mínima deve ter 18 anos. Todo depósito é considerado uma transação privada entre a Zipo Aid Investments Limited e seu membro.",
   "hi_welcome": "Oi bem vindo",
   "about_1": "A Zipo Aid Investment Trader fornece assistência financeira confiável, consistente e lucrativa a nossos clientes em todo o mundo. Os investimentos em nossas plataformas de negociação são com segurança e gerenciados apenas por nossos comerciantes experientes para garantir um melhor gerenciamento de riscos e negociação lucrativa.",
   "tools": "Ferramentas de negociação avançadas.",
@@ -114,7 +114,7 @@
   "z_a_invest": "Planos de investimento da Zipo Aid",
   "mission_body": "Somos um investidor global de mercados privados com fortes raízes comerciais e um histórico longo e bem estabelecido. Estamos comprometidos em construir relacionamentos de longo prazo com nossos investidores, parceiros de investimento e colegas com base em confiança, abertura, respeito e os mais altos padrões de integridade e profissionalismo.",
   "hero_2": "troca criptográfica original.",
-  "privacy_body": "O ZIPO Aid Investments Limited sabe que você se importa com a forma como as informações sobre você são usadas e compartilhadas. Portanto, assumimos um forte compromisso de proteger e respeitar os princípios de privacidade sobre as informações que você fornece. Todos os dados fornecidos por um membro à Vogue Capitals Limited serão usados apenas privadamente e não divulgados a terceiros. Não venderemos, compartilharemos ou alugaremos suas informações pessoais a terceiros ou usaremos seu endereço de e-mail para correio não solicitado. Quaisquer e -mails enviados por esta empresa só estarão em conexão com a prestação de serviços acordados.",
+  "privacy_body": "O ZIPO Aid Investments Limited sabe que você se importa com a forma como as informações sobre você são usadas e compartilhadas. Portanto, assumimos um forte compromisso de proteger e respeitar os princípios de privacidade sobre as informações que você fornece. Todos os dados fornecidos por um membro à Zipo Aid Investmentstmentstmentstmentstmentstmentstments Limited serão usados apenas privadamente e não divulgados a terceiros. Não venderemos, compartilharemos ou alugaremos suas informações pessoais a terceiros ou usaremos seu endereço de e-mail para correio não solicitado. Quaisquer e -mails enviados por esta empresa só estarão em conexão com a prestação de serviços acordados.",
   "steps_2": "2. Entre no mercado",
   "steps_3": "3. Inicie o profissional profissional",
   "plan": "Plano",
